# jigsaw

./: README.md  TODO.txt  game.html  game.js  index.html  index.js  jigsaw-server.service  notes.txt  pre-commit  style.css  upload.sh
server/: .gitignore  Cargo.toml  featuredpictures.txt  featuredpictures_files.txt  getfeaturedpictures.py  jigsaw-server.service  potd.py
server/src/: main.rs
